--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
    <div class="info">
       <i class="fas fa-envelope"></i>
       <h3>email address</h3>
-      <p>shaikhanas@gmail.com</p>
-      <p>anasbhai@gmail.com</p>
+      <p>mail@gmail.com</p>
+      <p>mail@gmail.com</p>
    </div>
 
    <div class="info">
       <i class="fas fa-map-marker-alt"></i>
       <h3>office address</h3>
-      <p>mumbai, india - 400104</p>
+      <p>YourSiti, Country - 000000</p>
    </div>
 
    <div class="share">
@@ -658,7 +658,7 @@
       <a class="btn" href="#blogs">blogs</a>
    </div>
 
-   <div class="credit"> created by <span>mr. web designer</span> | all rights reserved! </div>
+   <div class="credit"> created by <span>Your Site</span> | all rights reserved! </div>
 
 </section>
 
